[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bphai"
version = "1.0.0"
description = "Behavioral Pattern Hashing AI - Advanced prompt injection resistance system"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "BPHAI Development Team", email = "dev@bphai.org"},
]
maintainers = [
    {name = "BPHAI Development Team", email = "dev@bphai.org"},
]
keywords = [
    "ai",
    "security",
    "prompt-injection",
    "neural-networks",
    "nlp",
    "machine-learning",
    "cybersecurity",
    "artificial-intelligence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "aiohttp>=3.8.0",
    "aiofiles>=23.0.0",
    "asyncio-throttle>=1.0.2",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scipy>=1.10.0",
    "nltk>=3.8.0",
    "textblob>=0.17.0",
    "langdetect>=1.0.9",
    "cryptography>=41.0.0",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "psutil>=5.9.0",
    "orjson>=3.9.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "isort>=5.12.0",
    "ipython>=8.14.0",
    "jupyter>=1.0.0",
]
docs = [
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
]
web = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "streamlit>=1.25.0",
]
ml = [
    "scikit-learn>=1.3.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "spacy>=3.6.0",
]
database = [
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
]
cache = [
    "redis>=4.6.0",
    "aioredis>=2.0.0",
]
http = [
    "requests>=2.31.0",
    "httpx>=0.24.0",
]
performance = [
    "memory-profiler>=0.61.0",
    "line-profiler>=4.0.0",
]
all = [
    "bphai[dev,docs,web,ml,database,cache,http,performance]",
]

[project.urls]
"Homepage" = "https://github.com/bphai/bphai"
"Bug Tracker" = "https://github.com/bphai/bphai/issues"
"Documentation" = "https://bphai.readthedocs.io/"
"Source Code" = "https://github.com/bphai/bphai"
"Changelog" = "https://github.com/bphai/bphai/blob/main/CHANGELOG.md"

[project.scripts]
bphai = "bphai.cli:main"
bphai-test = "bphai.testing:run_tests"
bphai-demo = "bphai.demo:run_demo"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
bphai = [
    "config/*.yaml",
    "config/*.json",
    "data/*.txt",
    "templates/*.html",
]

# Black configuration
[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'
extend-exclude = '''
(
  /(
      \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "nltk.*",
    "textblob.*",
    "langdetect.*",
    "spacy.*",
    "transformers.*",
    "torch.*",
    "sklearn.*",
]
ignore_missing_imports = true

# Pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "slow: marks tests as slow (deselect with '-m "not slow"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "security: marks tests as security-related",
    "performance: marks tests as performance benchmarks",
]
filterwarnings = [
    "error",
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__init__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\bProtocol\):",
    "@(abc.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"

# Flake8 configuration (in setup.cfg since flake8 doesn't support pyproject.toml yet)
# See setup.cfg for flake8 configuration