[metadata]
name = bphai
version = 1.0.0
author = BPHAI Development Team
author_email = dev@bphai.org
description = Behavioral Pattern Hashing AI - Advanced prompt injection resistance system
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/bphai/bphai
project_urls =
    Bug Tracker = https://github.com/bphai/bphai/issues
    Documentation = https://bphai.readthedocs.io/
    Source Code = https://github.com/bphai/bphai
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Security
    Topic :: Software Development :: Libraries :: Python Modules

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.10
include_package_data = True
zip_safe = False
install_requires =
    aiohttp>=3.8.0
    aiofiles>=23.0.0
    asyncio-throttle>=1.0.2
    numpy>=1.24.0
    pandas>=2.0.0
    scipy>=1.10.0
    nltk>=3.8.0
    textblob>=0.17.0
    langdetect>=1.0.9
    cryptography>=41.0.0
    python-dotenv>=1.0.0
    pyyaml>=6.0.0
    loguru>=0.7.0
    psutil>=5.9.0
    orjson>=3.9.0
    pydantic>=2.0.0

[options.packages.find]
where = src

[options.extras_require]
dev =
    pytest>=7.4.0
    pytest-asyncio>=0.21.0
    pytest-cov>=4.1.0
    pytest-mock>=3.11.0
    black>=23.0.0
    flake8>=6.0.0
    mypy>=1.5.0
    isort>=5.12.0
    ipython>=8.14.0
    jupyter>=1.0.0
docs =
    sphinx>=7.0.0
    sphinx-rtd-theme>=1.3.0
web =
    fastapi>=0.100.0
    uvicorn>=0.23.0
    streamlit>=1.25.0
ml =
    scikit-learn>=1.3.0
    transformers>=4.30.0
    torch>=2.0.0
    spacy>=3.6.0
database =
    sqlalchemy>=2.0.0
    aiosqlite>=0.19.0
cache =
    redis>=4.6.0
    aioredis>=2.0.0
http =
    requests>=2.31.0
    httpx>=0.24.0
performance =
    memory-profiler>=0.61.0
    line-profiler>=4.0.0

[options.entry_points]
console_scripts =
    bphai = bphai.cli:main
    bphai-test = bphai.testing:run_tests
    bphai-demo = bphai.demo:run_demo

[options.package_data]
bphai =
    config/*.yaml
    config/*.json
    data/*.txt
    templates/*.html

# Flake8 configuration
[flake8]
max-line-length = 100
max-complexity = 10
select = E,W,F,C
ignore =
    E203,  # whitespace before ':' (conflicts with black)
    E501,  # line too long (handled by black)
    W503,  # line break before binary operator (conflicts with black)
    F401,  # imported but unused (handled by isort)
    C901,  # too complex (we handle this case by case)
exclude =
    .git,
    __pycache__,
    .venv,
    venv,
    .eggs,
    *.egg,
    build,
    dist,
    .tox,
    .coverage,
    .pytest_cache,
    htmlcov,
    docs/_build
per-file-ignores =
    __init__.py:F401
    tests/*:F401,F811

# Bandit security linter configuration
[bandit]
exclude_dirs = tests,docs,build,dist
skips = B101,B601

# Tool configuration for development
[tool:pytest]
minversion = 7.0
addopts = -ra -q --strict-markers --strict-config
testpaths = tests
python_files = test_*.py *_test.py
python_classes = Test*
python_functions = test_*
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
    integration: marks tests as integration tests
    unit: marks tests as unit tests
    security: marks tests as security-related
    performance: marks tests as performance benchmarks
filterwarnings =
    error
    ignore::UserWarning
    ignore::DeprecationWarning

# Coverage configuration
[coverage:run]
source = src
omit =
    */tests/*
    */test_*.py
    */__init__.py
    */setup.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    class .*\bProtocol\):
    @(abc\.)?abstractmethod

[coverage:html]
directory = htmlcov